# physical_optimization

./: .gitignore  README.md  requirements.txt
.github/workflows/: cpp_unittest.yml  py_deploy.yml  py_unittest.yml  unittest.yml
cpp20/: CMakeLists.txt  readme.md
cpp20/src/geometry/: CMakeLists.txt  coefficient_base.cc  coefficient_base.h  polynomial1d.cc  polynomial1d.h  polynomial2d.h  spline1d.cc  spline1d.h  spline2d.h
cpp20/src/solver/: CMakeLists.txt  distance_time_solver.cc  distance_time_solver.h  path_solver.cc  path_solver.h  qp_test.cc  solver_impl.cc  solver_impl.h  spline_nd_solver.cc  spline_nd_solver.h
cpp20/src/utils/: CMakeLists.txt  abstract.h
cpp20/test/geometry/: CMakeLists.txt  test_coefficient_base.cc  test_polynomial1d.cc  test_polynomial2d.cc  test_spline1d.cc  test_spline2d.cc
cpp20/test/solver/: CMakeLists.txt  test_distance_time_solver.cc  test_path_solver.cc  test_solver_impl.cc  test_spline_nd_solver.cc
python38/: .pylintrc  README.md  requirements.txt  setup.py
python38/src/: abstract.py
python38/src/geometry/: bezier1d.py  bezier_base.py  coefficient_base.py  polynomial.py  polynomial2d.py  spline.py  spline2d.py
python38/src/solver/: distance_time_solver.py  path_solver.py  solver_base.py  solver_impl.py  spline_nd_solver.py  st_solver.py
python38/test/geometry/: test_1d_spline.py  test_2d_polynomial.py  test_bezier_1d.py  test_bezier_base.py  test_polynomial.py  test_spline.py
python38/test/solver/: test_distance_time_solver.py  test_solver_base.py  test_solver_impl.py  test_spline_nd_solver.py
src/: abstract.py
src/geometry/: coefficient_base.py  polynomial1d.py  polynomial2d.py  spline1d.py
src/solver/: distance_time_solver.py  path_solver.py
test/geometry/: test_1d_polynomial.py  test_2d_spline.py
test/solver/: test_path_solver.py
